Closed Bug 1634882 Opened 4 years ago Closed 4 years ago

Fix missing Ion.h include in CacheIR.cpp

Categories

(Core :: JavaScript Engine: JIT, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: tcampbell, Assigned: tcampbell)

Details

Attachments

(1 file)

This header provides definition for IsIonEnabled.

Pushed by tcampbell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1f34425841c7
Add missing Ion.h include in CacheIR.cpp. r=evilpie
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: