Bug 1634882 - Add missing Ion.h include in CacheIR.cpp. r=evilpie

Differential Revision: https://phabricator.services.mozilla.com/D73545